--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
+    "i18next": "^21.10.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "react-icons": "^4.4.0",
     "react-router": "^6.4.1",
     "react-scripts": "5.0.1",
