--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.8",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
