--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.5.1",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
+    "i18next-http-backend": "^1.4.4",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
