--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "babel-plugin-named-exports-order": "0.0.2",
     "prop-types": "^15.8.1",
     "react-router-dom": "^6.4.1",
+    "storybook-react-context": "^0.6.0",
     "webpack": "^5.74.0"
   }
 }
