--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
+    "fetch-mock": "^9.11.0",
     "framer-motion": "^6.5.1",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
